# desk-cli

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
cli/: Cargo.toml
cli/src/: error.rs  main.rs
cli/src/auth/: credentials.rs  device_flow.rs  mod.rs  tokens.rs
cli/src/auth/providers/: github.rs  google.rs  mod.rs
cli/src/cli/: args.rs  mod.rs
cli/src/cli/commands/: auth.rs  mod.rs  sync.rs  workspace.rs
cli/src/client/: api.rs  mod.rs
cli/src/client/middleware/: auth.rs  mod.rs  refresh.rs
cli/src/config/: mod.rs  paths.rs  settings.rs  state.rs
cli/src/git/: error.rs  mod.rs  operations.rs  types.rs
cli/src/workspace/: error.rs  mod.rs  storage.rs  types.rs
docs/: BRANCH_PROTECTION.md
