[package]
name = "desk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Developer context switching tool - save, switch, and restore your complete development environment"
readme = "../README.md"

[lints]
workspace = true

[[bin]]
name = "desk"
path = "src/main.rs"

[dependencies]
# Dependencies will be added as features are implemented

[dev-dependencies]
# Test dependencies will be added as needed
