[package]
name = "desk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Developer context switching tool - save, switch, and restore your complete development environment"
readme = "../README.md"

[lints]
workspace = true

[[bin]]
name = "desk"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"

# Async Runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "sync"] }

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"

# OAuth2
oauth2 = "4.4"

# Git operations
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# Secure Credential Storage
keyring = { version = "3.6", features = ["linux-native", "apple-native", "windows-native"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
open = "5.3"
async-trait = "0.1"
http = "1.2"

[dev-dependencies]
# Async testing
tokio-test = "0.4"

# HTTP mocking (0.5.x for Rust 2021 edition compatibility)
wiremock = "0.5"

# Trait mocking
mockall = "0.13"

# Temp files for tests
tempfile = "3.15"
